Fixed missing scrollbar for event list on dashboard https://app.clickup.com/t/2579894/DEV-2210

--- a/eva/src/sass/dashPanelBoard.sass
+++ b/eva/src/sass/dashPanelBoard.sass
@@ -183,6 +183,14 @@
 
                     .v-select__selection
                         color: inherit
+            &.textarea-scroll
+                .v-input__append-inner
+                    position: absolute
+                    right: 10px
+                    top: 0
+                textarea
+                    max-height: 450px
+                    overflow: auto
 
 
         .event-btn
